--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
        MONGO_INITDB_ROOT_PASSWORD: P@ssw0rd
      ports:
        - "27017:27017"
-#volumes:
+     volumes:
+       - mongo_data:/data/db
+volumes:
 #  mssql_data:
-#  wp_data:
+  mongo_data:
