--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
        - "1883:1883"
        - "9001:9001"
      volumes:
-       - mosquitto.conf:/mosquitto/config/mosquitto.conf
+       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
 
 volumes:
 #  mssql_data:
