--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
 #      - "8000:80"
 #    depends_on:
 #      - mssql
-#   mssql:
-#    image: mcr.microsoft.com/mssql/server:2017-latest
-#    environment:
-#      - SA_PASSWORD=P@ssw0rd
-#      - ACCEPT_EULA=Y
-#    ports:
-#      - "1433:1433"
-#    volumes:
-#      - mssql_data:/var/opt/mssql/data
+   mssql:
+    image: mcr.microsoft.com/mssql/server:2017-latest
+    environment:
+      - SA_PASSWORD=P@ssw0rd
+      - ACCEPT_EULA=Y
+    ports:
+      - "1433:1433"
+    volumes:
+      - mssql_data:/var/opt/mssql/data
    mongo:
      image: mongo
      restart: always
@@ -33,7 +33,7 @@ services:
        - "9001:9001"
      volumes:
        - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
-
+       - ./passwd_file:/mosquitto/config/passwd_file
 volumes:
-#  mssql_data:
+  mssql_data:
   mongo_data:
