--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,28 @@ services:
      volumes:
        - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
        - ./passwd_file:/mosquitto/config/passwd_file
+   ftpd_server:
+     image: stilliard/pure-ftpd:latest
+     container_name: pure-ftpd
+     ports:
+       - "21:21"
+       - "30000-30009:30000-30009"
+     volumes: # remember to replace /folder_on_disk/ with the path to where you want to store the files on the host machine
+       - "./ftpd/data:/home/username/"
+       - "./ftpd/passwd:/etc/pure-ftpd/passwd"
+# uncomment for ssl/tls, see https://github.com/stilliard/docker-pure-ftpd#tls
+#      - "/folder_on_disk/ssl:/etc/ssl/private/"
+# or ssl/tls with Let's Encrypt (cert and key as two files)
+#      - "/etc/letsencrypt/live/<your_server>/cert.pem:/etc/ssl/private/pure-ftpd-cert.pem"
+#      - "/etc/letsencrypt/live/<your_server>/privkey.pem:/etc/ssl/private/pure-ftpd-key.pem"
+     environment:
+       PUBLICHOST: "192.168.1.120"
+       FTP_USER_NAME: username
+       FTP_USER_PASS: mypass
+       FTP_USER_HOME: /home/username
+# also for ssl/tls:
+#      ADDED_FLAGS: "--tls=2"
+     restart: always
 volumes:
   mssql_data:
   mongo_data:
