--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,14 @@ services:
        - "27017:27017"
      volumes:
        - mongo_data:/data/db
-   mqtt:
+   mosquitt:
      image: eclipse-mosquitto
      ports:
        - "1883:1883"
        - "9001:9001"
      volumes:
-       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
-       - ./passwd_file:/mosquitto/config/passwd_file
+       - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+       - ./mosquitto/passwd_file:/mosquitto/config/passwd_file
    ftpd_server:
      image: stilliard/pure-ftpd:latest
      #container_name: pure-ftpd
