modify password of ftp

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,9 @@ services:
 #      - "/etc/letsencrypt/live/<your_server>/cert.pem:/etc/ssl/private/pure-ftpd-cert.pem"
 #      - "/etc/letsencrypt/live/<your_server>/privkey.pem:/etc/ssl/private/pure-ftpd-key.pem"
      environment:
-       PUBLICHOST: "192.168.1.120"
+       PUBLICHOST: "192.168.48.159"
        FTP_USER_NAME: username
-       FTP_USER_PASS: mypass
+       FTP_USER_PASS: P@ssw0rd
        FTP_USER_HOME: /home/username
 # also for ssl/tls:
 #      ADDED_FLAGS: "--tls=2"
