--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
      volumes:
        - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
        - ./mosquitto/passwd_file:/mosquitto/config/passwd_file
-   ftpd_server:
+   ftp:
      image: stilliard/pure-ftpd:latest
      #container_name: pure-ftpd
      ports:
@@ -53,9 +53,7 @@ services:
    sftp:
      image: atmoz/sftp
      ports:
-       - "2222:22"
-     volumes: 
-       - "./sftp/upload:/home/username/upload" 
+       - "2222:22" 
      command: username:P@ssw0rd:::upload
 volumes:
   mssql_data:
